--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,16 @@
 img {
   width: 100%;
   margin-bottom: 10px;
-  margin-top: 5px;
+  margin-top: 15%;
+  border-radius: 10%;
 }
 
 .jumbotron h1 {
-  color: #C70039;
+  color: #33E3FF;
   text-align: center;
+}
+
+
+.container {
+  background-image: url(http://netdna.webdesignerdepot.com/uploads/2015/03/featured5-1024x502.jpg);
 }
